--- a/src/components/login/SignUp.css
+++ b/src/components/login/SignUp.css
@@ -1,7 +1,8 @@
 .SignUp {
     width: 100%;
     height: 100%;
-    background: url(https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-blue-tech-geometric-graphic-party-sign-in-background-material-backgroundgeometryevening-sign-image_73734.jpg) ;
+    background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-blue-tech-geometric-graphic-party-sign-in-background-material-backgroundgeometryevening-sign-image_73734.jpg) ;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .title-SignUp {
@@ -22,7 +23,7 @@ form {
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
-    padding: 45px 10px 40px 10px;
+    padding: 45px 10px 20px 10px;
     border-radius: 10px;
 
 }
@@ -105,4 +106,20 @@ form>h2 {
 .done:hover {
     background-color: #3f9b1a;
     transition: 0.5s ease-in;
+}
+
+.infor {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.infor>p {
+    font-weight: 600;
+    font-size: 12px;
+    margin-bottom: 0;
+}
+
+.infor>a {
+    margin-bottom: 0;
+    font-size: 15px;
 }
