done SignUp and SignIn

--- a/src/components/login/SignUp.css
+++ b/src/components/login/SignUp.css
@@ -2,7 +2,8 @@
     width: 100%;
     height: 100%;
     background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-blue-tech-geometric-graphic-party-sign-in-background-material-backgroundgeometryevening-sign-image_73734.jpg) ;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .title-SignUp {
