--- a/src/components/login/SignIn.css
+++ b/src/components/login/SignIn.css
@@ -1,8 +1,9 @@
 .SignIn {
     width: 100%;
     height: 100%;
-    background: url(https://i.pinimg.com/originals/4a/ba/f3/4abaf352645fd2142ed6555f789e0a2e.jpg);
-    
+    background-image: url(https://i.pinimg.com/originals/4a/ba/f3/4abaf352645fd2142ed6555f789e0a2e.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .title-SignIn {
@@ -23,6 +24,7 @@
     padding-right: 20px;
     display: flex;
     flex-direction: column;
+    
 
 }
 
@@ -80,6 +82,7 @@
 .social-group {
     display: flex;
     justify-content: center;
+    margin-top: 10px;
 }
 
 .social-group > li {
@@ -87,4 +90,9 @@
     margin-right: 10px;
 }
 
-
+.social {
+    color: #4e0ed1;
+    padding: 5px 8px 12px 9px;
+    border-radius: 99px;
+    background-color: rgba(0, 0, 255, 0.3);
+}
