--- a/src/components/login/SignUp.css
+++ b/src/components/login/SignUp.css
@@ -1,7 +1,7 @@
 .SignUp {
     width: 100%;
     height: 100%;
-    background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-blue-tech-geometric-graphic-party-sign-in-background-material-backgroundgeometryevening-sign-image_73734.jpg) ;
+    background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-blue-tech-geometric-graphic-party-sign-in-background-material-backgroundgeometryevening-sign-image_73734.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -16,7 +16,7 @@
     font-weight: 700;
 }
 
-form {
+.form-SignUp {
     width: auto;
     height: auto;
     background-color: #ffffff;
@@ -26,10 +26,9 @@ form {
     margin-right: auto;
     padding: 45px 10px 20px 10px;
     border-radius: 10px;
-
 }
 
-form>h2 {
+.form-SignUp>h2 {
     color: #7f7683;
     font-weight: 700;
     text-align: center;
@@ -43,7 +42,6 @@ form>h2 {
     padding-right: 20px;
     display: flex;
     flex-direction: column;
-
 }
 
 .title-input {
@@ -60,10 +58,10 @@ form>h2 {
     background-color: #eff2f5;
     padding: 15px 0px 15px 10px;
     border-radius: 30px;
-    box-shadow:  0px 5px 8px -9px rgba(0, 0, 0, 1);
+    box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 1);
 }
 
-.SignUp-input > input {
+.SignUp-input>input {
     border: none;
     background-color: transparent;
     outline-width: 0;
