--- a/src/components/NotFound.css
+++ b/src/components/NotFound.css
@@ -1,4 +1,15 @@
+.wrap-not-found {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 60px;
+}
 .img-notFound {
-    width: 100%;
-    height: 100%;
+  width: 30%;
+  height: auto;
+}
+.text-not-found {
+  font-weight: 700;
+}
+.content {
+  font-size: medium;
 }
