--- a/src/components/body/topic/topic.css
+++ b/src/components/body/topic/topic.css
@@ -83,7 +83,7 @@ html {
 .group-topic {
     padding: 25px 35px 25px 35px;
     border-radius: 5px;
-    background-color: rgba(218, 218, 218, .2);
+    background-color: rgba(218, 218, 218, .6);
     align-items: center;
     margin-bottom: 60px;
     height: auto;
@@ -205,43 +205,5 @@ html {
     transition: all 0.2s;
 }
 
-.group-categories-topic {
-    height: 370px;
-    background: #F3F3F3 ;
-    border-radius: 10px;
-    padding-left: 21px;
-    margin-left: 35px;
-}
+/**------------------*/
 
-.title-categories-topic {
-    font-size: 14px;
-    font-weight: 400;
-    letter-spacing: 0px;
-    color: #1e221d;
-    margin-top: 16px;
-    margin-bottom: 0;
-}
-
-.category-topic {
-    margin-top: 2px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.content-category-topic {
-    font-size: .7rem;
-    font-weight: 450;
-    color: #FFFFFF;
-    background: #818A91;
-    border: 1px solid #707070;
-    border-radius: 18px;
-    padding: 2px 5px 3px 5px;
-    margin-right: 5px;
-    margin-top: 5px;
-    text-decoration: none;
-}
-
-.content-category-topic:hover {
-    text-decoration: none;
-    color: #084f70;
-}
