--- a/src/components/body/home-page/home-page.css
+++ b/src/components/body/home-page/home-page.css
@@ -1,38 +1,63 @@
+body {
+  /* background-color: #e4e4e494; */
+  background-image: linear-gradient(rgb(255, 255, 255), #dee9e0);
+  background-repeat: no-repeat;
+}
 #banner {
+  height: 215px;
+  margin-bottom: 50px;
+  background: #7b7b7b;
+  position: relative;
+}
+#bg-banner {
   background-image: url(/assets/home-page/banner.png);
-  height: 150px;
-  margin-bottom: 80px;
-  /* text-shadow: 10px 10px 25px #000000; */
-  /* filter: drop-shadow(0px -20px 16px rgb(0, 0, 0)); */
+  height: 215px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 0.3;
 }
 #banner h1 {
+  position: absolute;
+  top: 26px;
   font-size: 60px;
+  color: #ffffff;
+  left: 515px;
+  /* box-shadow: 0px 10px 25px #ffffff;
+   */
+  text-shadow: 5px 5px 10px #4f8137;
 }
 #banner h3 {
-  font-size: 35px;
-  font-weight: 650;
+  position: absolute;
+  top: 105px;
+  font-size: 45px;
+  color: #ffffff;
+  left: 260px;
 }
 
 /* -------content------ */
 
 .highlight-topic {
-  box-shadow: 5px 5px 5px #1a262b4f;
+  /* box-shadow: 5px 5px 5px #1a262b4f; */
   padding: 10px 20px;
-  border-bottom: 1px solid #727272;
+  /* border-bottom: 1px solid #727272;     */
   margin-bottom: 50px;
   transition: all 0.25s;
+  background-color: #ffffff;
 }
 .highlight-topic:hover {
-  box-shadow: 15px 15px 30px #1a262b;
+  /* box-shadow: 10px 10px 30px #696969; */
+  background-color: rgba(227, 238, 228, 0.466);
   transition: all 0.25s;
 }
 
 #img-logo {
   display: block;
-  width: 110px;
-  height: 110px;
+  width: 65px;
+  height: 65px;
   overflow: hidden;
   border-radius: 50%;
+  margin-top: 10px;
 }
 #img-logo a {
   display: block;
@@ -41,29 +66,33 @@
 .highlight-topic a.university-name {
   display: block;
   color: #1a262b;
-  font-size: 30px;
-  font-weight: 700;
+  font-size: 25px;
+  font-weight: 500;
 }
 .highlight-topic span.address {
-  color: #5e6c72;
-  font-size: 14px;
+  color: #53a63a;
+  font-size: 16px;
   display: block;
   margin-bottom: 15px;
+  font-weight: 600;
 }
 
 .highlight-topic span.count-rate,
 .highlight-topic span.count-comment {
   color: #727272;
-  font-size: 14px;
+  font-size: 13px;
+}
+.padding-left-32 {
+  padding-left: 32px;
 }
 .highlight-topic p.demo-content {
-  font-size: 15px;
+  font-size: 14px;
   color: #5e5e5e;
   margin-bottom: 5px;
 }
 .highlight-topic a.detail {
   display: inline-block;
-  color: #1a262b;
+  color: #5d963f;
   font-size: 14px;
   font-weight: 600;
 }
@@ -74,16 +103,64 @@
   float: right;
 }
 
-/* -----------PhĂ¢n trang ---------- */
+/* -----------Phân trang ---------- */
 .page-link {
   color: #000000;
   font-weight: 500;
 }
 
 /* --------------------sidebar------------- */
-#count-start {
-  background-color: #e4e4e4;
+#sidebar #filter {
+  background-color: #ffffff;
   padding: 10px 0px;
-  width: 80%;
+  width: 100%;
   float: right;
+}
+
+#sidebar #filter a.map {
+  color: #ffffff;
+  background-color: #5d963f;
+  width: 90%;
+  margin: 0px auto;
+  font-weight: 700;
+  font-size: 18px;
+  padding: 5px 0px;
+}
+.filter-form .form-group .locate {
+  text-align: left;
+  margin-left: 30px;
+}
+.filter-form .form-group .region {
+  text-align: left;
+  margin-left: 20px;
+  margin-top: 9px;
+}
+.locate.margin-r-10 {
+  margin-right: 13px;
+}
+
+.filter-form .form-group .locate input {
+  margin-right: 5px;
+}
+
+.page-item:hover > span,
+.page-item:hover > a {
+  color: #62b138 !important;
+}
+
+.btn-loc {
+  border: 2px solid #5d963f !important;
+  color: #5d963f;
+  font-weight: 700;
+  font-size: 18px;
+  padding: 3px;
+  width: 50%;
+}
+.btn-loc:hover {
+  background-color: #5d963f;
+  color: #ffffff;
+}
+
+.form-control:focus {
+  box-shadow: 0 0 0 0.2rem #5d963f;
 }
