cập nhật lại các trang intro: bg, Major: table, Galery sửa with: auto

--- a/src/components/body/detail-university/Galery.css
+++ b/src/components/body/detail-university/Galery.css
@@ -24,16 +24,7 @@
 }
 
 .img-galery {
-    width: 350px;
+    width: auto;
     height: 250px;
 }
 
-.small-img-galery {
-    width: 250px;
-    height: 250px;
-}
-
-.big-img-galery {
-    width: 565px;
-    height: 250px;
-}
