--- a/src/components/body/detail-university/Major.css
+++ b/src/components/body/detail-university/Major.css
@@ -18,6 +18,9 @@
     padding: 10px 5px 10px 5px;
     background: #013248;
     color: #ffffff;
+    position: -webkit-sticky;
+    position: sticky;
+    top:0;
 }
 
 .td-major {
