--- a/src/components/body/detail-university/Galery.css
+++ b/src/components/body/detail-university/Galery.css
@@ -15,12 +15,19 @@
     flex-direction: column;
 }
 
-
+.item-galery {
+    overflow: hidden;
+    width: fit-content;
+}
 
 .content-img-galery {
     font-size: 16px;
     font-weight: 500;
-    padding-left: 15px;
+    padding-left: 10px;
+    width: 300px;
+    overflow: hidden;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 .img-galery {
