--- a/src/components/body/detail-university/Galery.css
+++ b/src/components/body/detail-university/Galery.css
@@ -1,37 +1,41 @@
 .title-galery {
-    font-weight: 700;
-    font-size: 35px;
-    margin-top: 20px;
-    margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-bottom: 100px;
+}
+.under {
+  border-bottom: 1px solid rgba(1, 1, 1, 0.5);
 }
 
 .gird-galery {
-    justify-content: space-around;
+  justify-content: space-around;
 }
 
 .main-galery {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .item-galery {
-    overflow: hidden;
-    width: fit-content;
+  overflow: hidden;
+  width: fit-content;
 }
 
 .content-img-galery {
-    font-size: 16px;
-    font-weight: 500;
-    padding-left: 10px;
-    width: 300px;
-    overflow: hidden;
-    word-wrap: break-word;
-    word-break: break-all;
+  font-size: 16px;
+  font-weight: 500;
+  padding-left: 10px;
+  width: 300px;
+  overflow: hidden;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
-.img-galery {
-    width: auto;
-    height: 250px;
+.img-gallery {
+  opacity: 0.8;
 }
-
+.img-gallery:hover {
+  opacity: 1;
+}
