--- a/src/components/body/detail-university/style/sticky.css
+++ b/src/components/body/detail-university/style/sticky.css
@@ -5,7 +5,7 @@
   align-items: center;
   width: 50px;
   position: absolute;
-  margin-left: 2%;
+  margin: 150px 0px 0px 2%;
 }
 .logo-intro {
   width: 40px;
