--- a/src/components/body/home-page/home-page.css
+++ b/src/components/body/home-page/home-page.css
@@ -1,4 +1,4 @@
-body {
+.body-homepage {
   /* background-color: #e4e4e494; */
   background-image: linear-gradient(rgb(255, 255, 255), #dee9e0);
   background-repeat: no-repeat;
