--- a/src/components/body/home-page/home-page.css
+++ b/src/components/body/home-page/home-page.css
@@ -35,7 +35,7 @@
   left: 260px;
 }
 
-/* -------content------ */
+/* -------CardHome component ------ */
 
 .highlight-topic {
   /* box-shadow: 5px 5px 5px #1a262b4f; */
@@ -109,7 +109,7 @@
   font-weight: 500;
 }
 
-/* --------------------sidebar------------- */
+/* --------------------Filter Form component ------------- */
 #sidebar #filter {
   background-color: #ffffff;
   padding: 10px 0px;
@@ -121,27 +121,27 @@
   color: #ffffff;
   background-color: #5d963f;
   width: 90%;
-  margin: 0px auto;
+  margin: 20px auto 10px auto;
   font-weight: 700;
   font-size: 18px;
   padding: 5px 0px;
 }
-.filter-form .form-group .locate {
+/* .filter-form .form-group .locate {
   text-align: left;
-  margin-left: 30px;
-}
-.filter-form .form-group .region {
+  margin-left: 10px;
+} */
+/* .filter-form .form-group .region {
   text-align: left;
   margin-left: 20px;
   margin-top: 9px;
-}
+} */
 .locate.margin-r-10 {
   margin-right: 13px;
 }
 
-.filter-form .form-group .locate input {
+/* .filter-form .form-group .locate input {
   margin-right: 5px;
-}
+} */
 
 .page-item:hover > span,
 .page-item:hover > a {
@@ -149,12 +149,11 @@
 }
 
 .btn-loc {
-  border: 2px solid #5d963f !important;
+  margin-left: 20%;
+  width: 50%;
   color: #5d963f;
   font-weight: 700;
   font-size: 18px;
-  padding: 3px;
-  width: 50%;
 }
 .btn-loc:hover {
   background-color: #5d963f;
@@ -163,4 +162,26 @@
 
 .form-control:focus {
   box-shadow: 0 0 0 0.2rem #5d963f;
+}
+.filter-form fieldset {
+  margin-bottom: 30px;
+  padding-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid rgba(1, 1, 1, 0.1);
+}
+.filter-form legend {
+  font-size: 16px;
+  font-weight: bold;
+}
+.filter-form {
+  padding: 20px;
+}
+.filter-form input,
+option,
+select,
+label {
+  margin-left: 5px;
+}
+#filter {
+  margin-bottom: 100px;
 }
