--- a/src/components/body/comment/comment.css
+++ b/src/components/body/comment/comment.css
@@ -14,6 +14,7 @@
     margin-top: 27px;
     align-items: center;
     color: rgb(216, 216, 215);
+    flex: 1;
 }
 
 .group-user-comment:hover {
@@ -45,6 +46,21 @@
     font-size: 12px;
 }
 
+.group-like-comment {
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    margin-right: 30px;
+    justify-content: flex-end;
+    text-align: right;
+    cursor: pointer;
+}
+
+.group-like-comment> svg {
+    font-size: 35px;
+}
 /**-------news comment*/
 
 .news-comment {
