configuration BE for topic page and show data on page

--- a/src/components/layout/style.css
+++ b/src/components/layout/style.css
@@ -47,7 +47,7 @@
   width: 50px;
   background: none;
   color: white;
-  border: none;
+  border: 1px solid #27363d;
 }
 .list-lang option {
   color: black;
